--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
-click==7.1.2
-dnspython==1.16.0
-email-validator==1.1.1
-Flask==1.1.2
-Flask-Admin==1.5.8 
-Flask-Login==0.5.0
-Flask-PyMongo==2.3.0
-Flask-WTF==0.14.3
-Flask-Security==3.0.0
-idna==2.9
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-pymongo==3.10.1
-querystring-parser==1.2.4
-six==1.15.0
-Werkzeug==1.0.1
-WTForms==2.3.1
-openpyxl==3.0.4
-PyYAML==5.4.1
+annotated-types==0.6.0
+anyio==3.7.1
+click==8.1.7
+fastapi==0.104.1
+h11==0.14.0
+httptools==0.6.1
+idna==3.4
+pydantic==1.10.13
+pydantic_core==2.10.1
+python-dotenv==1.0.0
+PyYAML==6.0.1
+sniffio==1.3.0
+SQLAlchemy==1.4.50
+sqlalchemy2-stubs==0.0.2a36
+sqlmodel==0.0.11
+starlette==0.27.0
+typing_extensions==4.8.0
+uvicorn==0.23.2
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
